--- a/index.html
+++ b/index.html
@@ -9,10 +9,17 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+      integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
-    <title>Ebook Website</title>
+    <title>Locum</title>
     <style></style>
   </head>
   <body>
@@ -52,6 +59,101 @@
     </div>
     <!-- Navigation  -->
     <!-- Navbar  -------------------------------------------------->
+    <nav
+      class="navbar navbar-expand-lg bg-body-tertiary navbar-dark py-4 sticky-top"
+    >
+      <div class="container-md">
+        <!-- Logo  -------------------------------------------------->
+        <a class="navbar-brand text-light" href="#">
+          <img src="images/logo.svg" alt="logo" style="width: 175px" />
+        </a>
+        <!-- Logo  -->
+        <!-- Hamburger button  -------------------------------------------------->
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <!-- Hamburger button  -->
+        <!-- Collapsable menu  -------------------------------------------------->
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            <!-- Search  -------------------------------------------------->
+            <li class="nav-item">
+              <a class="nav-link fw-bold" aria-current="page" href="#"
+                >Search Jobs</a
+              >
+            </li>
+            <!-- Search  -->
+            <!-- Locum tennes dropdown  -------------------------------------------------->
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle text-light fw-bold"
+                href="#"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                Locum Tenens
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">Action</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><hr class="dropdown-divider" /></li>
+                <li>
+                  <a class="dropdown-item" href="#">Something else here</a>
+                </li>
+              </ul>
+            </li>
+            <!-- Locum tennes dropdown -->
+            <!-- Medicl Providers dropdown  -------------------------------------------------->
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle text-light fw-bold"
+                href="#"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                For Medical Providers
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">Action</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><hr class="dropdown-divider" /></li>
+                <li>
+                  <a class="dropdown-item" href="#">Something else here</a>
+                </li>
+              </ul>
+            </li>
+            <!-- Medicl Providers dropdown  -->
+            <!-- Medicl Facilities  -------------------------------------------------->
+            <li class="nav-item">
+              <a class="nav-link fw-bold" aria-current="page" href="#"
+                >For Medical Facilities</a
+              >
+            </li>
+            <!-- Medicl Facilities  -->
+            <!-- Call Button  -------------------------------------------------->
+            <button
+              class="btn btn-primary hstack gap-2 mx-lg-2 my-2 my-lg-0"
+              style="width: fit-content"
+            >
+              <i class="fa-solid fa-phone text-white"></i>
+              <span>1-888-837-31722</span>
+            </button>
+            <!-- Call Button  -->
+          </ul>
+        </div>
+        <!-- Collapsable menu  -->
+      </div>
+    </nav>
     <!-- Navbar  -->
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/script.js"></script>
