solving some bugs

--- a/for_medical_facilities.html
+++ b/for_medical_facilities.html
@@ -107,7 +107,7 @@
                 Locum Tenens
               </a>
               <ul
-                class="dropdown-menu dropdown-menu-dark"
+                class="dropdown-menu dropdown-menu-dark bg-lg-dark"
                 style="background-color: transparent"
               >
                 <li>
@@ -148,7 +148,7 @@
                 For Medical Providers
               </a>
               <ul
-                class="dropdown-menu dropdown-menu-dark"
+                class="dropdown-menu dropdown-menu-dark bg-lg-dark"
                 style="background-color: transparent"
               >
                 <li><a class="dropdown-item" href="#">Physicians</a></li>
@@ -196,7 +196,7 @@
     <!-- Navbar  -->
     <!-- connect with consultant  -------------------------------------------------->
     <section id="connectWithConsultant">
-      <div class="container-lg p-5">
+      <div class="container-lg px-2 py-5">
         <div class="mb-3">
           <div class="row g-0">
             <!-- card  -------------------------------------------------->
@@ -338,7 +338,7 @@
     <!-- connect with consultant  -->
     <!-- RECRUITMENT PARTNER -------------------------------------------------->
     <section>
-      <div class="container-lg p-5">
+      <div class="container-lg px-2 py-5">
         <div class="row">
           <!-- Title and description -------------------------------------------------->
           <div class="col-md-6 pe-0 pe-md-3">
@@ -373,7 +373,7 @@
     <!-- RECRUITMENT PARTNER -->
     <!-- Features -------------------------------------------------->
     <section id="sectionBackground">
-      <div class="container-lg p-5">
+      <div class="container-lg px-2 py-5">
         <div class="row">
           <!-- Title -------------------------------------------------->
           <div class="col-md-6">
@@ -592,7 +592,7 @@
     <!-- Features -->
     <!-- Locum events -------------------------------------------------->
     <div class="bg-light">
-      <div class="container-lg p-5">
+      <div class="container-lg px-2 py-5">
         <div class="row">
           <!-- Title -------------------------------------------------->
           <div class="col-12">
@@ -732,7 +732,7 @@
     <!-- Testimonials -->
     <!-- custoemr service -------------------------------------------------->
     <section class="bg-light pt-5">
-      <div class="container-lg p-5">
+      <div class="container-lg px-2 py-5">
         <div class="row">
           <!-- item 1 -------------------------------------------------->
           <div class="col-md-6 d-flex justify-content-center mb-5 mb-md-0">
