--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 Locum Tenens
               </a>
               <ul
-                class="dropdown-menu dropdown-menu-dark"
+                class="dropdown-menu dropdown-menu-dark bg-lg-dark"
                 style="background-color: transparent"
               >
                 <li>
@@ -152,7 +152,7 @@
                 For Medical Providers
               </a>
               <ul
-                class="dropdown-menu dropdown-menu-dark"
+                class="dropdown-menu dropdown-menu-dark bg-lg-dark"
                 style="background-color: transparent"
               >
                 <li><a class="dropdown-item" href="#">Physicians</a></li>
@@ -364,7 +364,7 @@
     <!-- About us section  -------------------------------------------------->
     <div class="bg-light">
       <div
-        class="container-lg p-5 d-flex flex-column align-items-center"
+        class="container-lg px-2 py-5 d-flex flex-column align-items-center"
         style="max-width: 1000px"
       >
         <div>
@@ -480,7 +480,7 @@
     </div>
     <!-- Speciality grid   -->
     <!-- video section  -------------------------------------------------->
-    <div class="container-lg p-5 d-flex flex-column align-items-center">
+    <div class="container-lg px-2 py-5 d-flex flex-column align-items-center">
       <div>
         <h1 class="lh-sm mb-0 fw-bold">WORKING TOGETHER TO</h1>
         <h1 class="lh-sm mt-0 text-primary fw-bold">PROVIDE QUALITY CARE.</h1>
@@ -498,7 +498,7 @@
     <!-- video section  -->
     <!-- What's locum section  -------------------------------------------------->
     <div class="bg-light d-flex justify-content-center">
-      <div class="container-lg p-5 row">
+      <div class="container-lg px-2 py-5 row">
         <!-- content  -------------------------------------------------->
         <div class="col-md-6 p-3">
           <div
@@ -540,7 +540,7 @@
     <!-- What's locum section  -->
     <!-- Why work with locum  -------------------------------------------------->
     <div
-      class="container-lg p-5 d-flex flex-column align-items-center"
+      class="container-lg px-2 py-5 d-flex flex-column align-items-center"
       style="max-width: 1000px"
     >
       <div>
@@ -577,7 +577,7 @@
     <!-- Why work with locum  -->
     <!-- Locum events -------------------------------------------------->
     <div class="bg-light">
-      <div class="container-lg p-5">
+      <div class="container-lg px-2 py-5">
         <div class="row">
           <!-- Title -------------------------------------------------->
           <div class="col-12">
@@ -717,7 +717,7 @@
     <!-- Testimonials -->
     <!-- custoemr service -------------------------------------------------->
     <section class="bg-light pt-5">
-      <div class="container-lg p-5">
+      <div class="container-lg px-2 py-5">
         <div class="row">
           <!-- item 1 -------------------------------------------------->
           <div class="col-md-6 d-flex justify-content-center mb-5 mb-md-0">
