--- a/search_jobs.html
+++ b/search_jobs.html
@@ -108,7 +108,7 @@
                 Locum Tenens
               </a>
               <ul
-                class="dropdown-menu dropdown-menu-dark"
+                class="dropdown-menu dropdown-menu-dark bg-lg-dark"
                 style="background-color: transparent"
               >
                 <li>
@@ -149,7 +149,7 @@
                 For Medical Providers
               </a>
               <ul
-                class="dropdown-menu dropdown-menu-dark"
+                class="dropdown-menu dropdown-menu-dark bg-lg-dark"
                 style="background-color: transparent"
               >
                 <li><a class="dropdown-item" href="#">Physicians</a></li>
@@ -200,7 +200,7 @@
     <!-- Navbar  -->
     <!-- search -------------------------------------------------->
     <section id="searchSection" class="bg-light">
-      <div class="container-lg p-5">
+      <div class="container-lg px-2 py-5">
         <div class="row">
           <!-- search title-------------------------------------------------->
           <div class="col-md-6 d-flex flex-column gap-0">
@@ -307,7 +307,7 @@
     <!-- search -->
     <!-- search cards -------------------------------------------------->
     <section id="searchCards">
-      <div class="container-lg p-5">
+      <div class="container-lg px-2 py-5">
         <!-- <div class="d-flex flex-column flex-md-row gap-2"> -->
         <div class="row">
           <!-- Card 1 -------------------------------------------------->
@@ -339,7 +339,6 @@
                 >
                   <div class="d-flex flex-row justify-content-start gap-2">
                     <p>Physician</p>
-                    <p>Gastroenterology</p>
                     <p>Illinois</p>
                   </div>
                   <a href="#" class="btn btn-primary">I'm Interested</a>
@@ -377,7 +376,6 @@
                 >
                   <div class="d-flex flex-row justify-content-start gap-2">
                     <p>Physician</p>
-                    <p>Gastroenterology</p>
                     <p>Illinois</p>
                   </div>
                   <a href="#" class="btn btn-primary">I'm Interested</a>
@@ -415,7 +413,6 @@
                 >
                   <div class="d-flex flex-row justify-content-start gap-2">
                     <p>Physician</p>
-                    <p>Gastroenterology</p>
                     <p>Illinois</p>
                   </div>
                   <a href="#" class="btn btn-primary">I'm Interested</a>
@@ -453,7 +450,6 @@
                 >
                   <div class="d-flex flex-row justify-content-start gap-2">
                     <p>Physician</p>
-                    <p>Gastroenterology</p>
                     <p>Illinois</p>
                   </div>
                   <a href="#" class="btn btn-primary">I'm Interested</a>
@@ -469,7 +465,7 @@
 
     <!-- Pagination -------------------------------------------------->
     <section>
-      <div class="container-lg p-5 d-flex justify-content-end w-full">
+      <div class="container-lg px-2 py-5 d-flex justify-content-end w-full">
         <nav aria-label="Page navigation">
           <ul class="pagination">
             <li class="page-item">
@@ -486,7 +482,7 @@
     <!-- Pagination -->
     <!-- custoemr service -------------------------------------------------->
     <section class="bg-light pt-5">
-      <div class="container-lg p-5">
+      <div class="container-lg px-2 py-5">
         <div class="row">
           <!-- item 1 -------------------------------------------------->
           <div class="col-md-6 d-flex justify-content-center mb-5 mb-md-0">
