adjusting the primary and the secondary color

--- a/for_medical_facilities.html
+++ b/for_medical_facilities.html
@@ -24,7 +24,7 @@
   </head>
   <body>
     <!-- Navigation  -------------------------------------------------->
-    <div class="bg-primary">
+    <div class="bg-primary text-white">
       <div
         class="container-lg d-flex justify-content-end gap-2 align-items-sm-center pt-3"
       >
@@ -32,7 +32,7 @@
         <p>
           <a
             href="#"
-            class="link-body-emphasis link-offset-2 link-underline-opacity-0"
+            class="link-body-emphasis link-offset-2 link-underline-opacity-0 text-white mx-2"
             >Why HayesLocums</a
           >
         </p>
@@ -41,7 +41,7 @@
         <p>
           <a
             href="#"
-            class="link-body-emphasis link-offset-2 link-underline-opacity-0"
+            class="link-body-emphasis link-offset-2 link-underline-opacity-0 text-white mx-2"
             >Blog</a
           >
         </p>
@@ -50,7 +50,7 @@
         <p>
           <a
             href="#"
-            class="link-body-emphasis link-offset-2 link-underline-opacity-0"
+            class="link-body-emphasis link-offset-2 link-underline-opacity-0 text-white mx-2"
             >Contact</a
           >
         </p>
@@ -66,7 +66,7 @@
       <div class="container-lg">
         <!-- Logo  -------------------------------------------------->
         <a class="navbar-brand text-light" href="index.html">
-          <img src="images/logo.svg" alt="logo" style="width: 175px" />
+          <img src="images/logo.png" alt="logo" style="height: 80px" />
         </a>
         <!-- Logo  -->
         <!-- Hamburger button  -------------------------------------------------->
@@ -196,7 +196,7 @@
     <!-- Navbar  -->
     <!-- connect with consultant  -------------------------------------------------->
     <section id="connectWithConsultant">
-      <div class="container-lg px-2 py-5">
+      <div class="container-lg px-3 py-5">
         <div class="mb-3">
           <div class="row g-0">
             <!-- card  -------------------------------------------------->
@@ -210,8 +210,8 @@
                     LOCUM HEALTHCARE RECRUITMENT FOR MEDICAL FACILITIES
                   </h3>
                   <h1
-                    class="card-title text-uppercase"
-                    style="font-size: 70px; line-height: 0.8em"
+                    class="card-title text-uppercase main-title"
+                    style="line-height: 0.8em"
                   >
                     Quality matches for quality care.
                   </h1>
@@ -338,7 +338,7 @@
     <!-- connect with consultant  -->
     <!-- RECRUITMENT PARTNER -------------------------------------------------->
     <section>
-      <div class="container-lg px-2 py-5">
+      <div class="container-lg px-3 py-5">
         <div class="row">
           <!-- Title and description -------------------------------------------------->
           <div class="col-md-6 pe-0 pe-md-3">
@@ -373,7 +373,7 @@
     <!-- RECRUITMENT PARTNER -->
     <!-- Features -------------------------------------------------->
     <section id="sectionBackground">
-      <div class="container-lg px-2 py-5">
+      <div class="container-lg px-3 py-5">
         <div class="row">
           <!-- Title -------------------------------------------------->
           <div class="col-md-6">
@@ -592,7 +592,7 @@
     <!-- Features -->
     <!-- Locum events -------------------------------------------------->
     <div class="bg-light">
-      <div class="container-lg px-2 py-5">
+      <div class="container-lg px-3 py-5">
         <div class="row">
           <!-- Title -------------------------------------------------->
           <div class="col-12">
@@ -732,7 +732,7 @@
     <!-- Testimonials -->
     <!-- custoemr service -------------------------------------------------->
     <section class="bg-light pt-5">
-      <div class="container-lg px-2 py-5">
+      <div class="container-lg px-3 py-5">
         <div class="row">
           <!-- item 1 -------------------------------------------------->
           <div class="col-md-6 d-flex justify-content-center mb-5 mb-md-0">
