--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </head>
   <body>
     <!-- Navigation  -------------------------------------------------->
-    <div class="bg-primary">
+    <div class="bg-primary text-white">
       <div
         class="container-lg d-flex justify-content-end gap-2 align-items-sm-center pt-3"
       >
@@ -32,7 +32,7 @@
         <p>
           <a
             href="#"
-            class="link-body-emphasis link-offset-2 link-underline-opacity-0"
+            class="link-body-emphasis link-offset-2 link-underline-opacity-0 text-white mx-2"
             >Why HayesLocums</a
           >
         </p>
@@ -41,7 +41,7 @@
         <p>
           <a
             href="#"
-            class="link-body-emphasis link-offset-2 link-underline-opacity-0"
+            class="link-body-emphasis link-offset-2 link-underline-opacity-0 text-white mx-2"
             >Blog</a
           >
         </p>
@@ -50,7 +50,7 @@
         <p>
           <a
             href="#"
-            class="link-body-emphasis link-offset-2 link-underline-opacity-0"
+            class="link-body-emphasis link-offset-2 link-underline-opacity-0 text-white mx-2"
             >Contact</a
           >
         </p>
@@ -67,9 +67,9 @@
         <!-- Logo  -------------------------------------------------->
         <a class="navbar-brand text-light" href="index.html">
           <img
-            src="images/logo.svg"
+            src="images/logo.png"
             alt="Image not found"
-            style="width: 175px"
+            style="height: 80px"
           />
         </a>
         <!-- Logo  -->
@@ -364,7 +364,7 @@
     <!-- About us section  -------------------------------------------------->
     <div class="bg-light">
       <div
-        class="container-lg px-2 py-5 d-flex flex-column align-items-center"
+        class="container-lg px-3 py-5 d-flex flex-column align-items-center"
         style="max-width: 1000px"
       >
         <div>
@@ -376,25 +376,25 @@
             with us.
           </h1>
         </div>
-        <h3 class="text-center text-secondary">
+        <h3 class="text-center text-dark">
           We do our best to match you with jobs that best suit you.
         </h3>
-        <p class="text-secondary text-center" style="max-width: 600px">
+        <p class="text-dark text-center" style="max-width: 600px">
           AmPm was founded by locum staffing specialists and an emergency
           physician who have over 40 years of collective experience in the locum
           industry
         </p>
-        <p class="text-secondary text-center" style="max-width: 600px">
+        <p class="text-dark text-center" style="max-width: 600px">
           A key pain point for healthcare providers is securing jobs that both
           maximize pay, and offer an enjoyable work environment that provides
           schedule flexibility.
         </p>
-        <p class="text-secondary text-center" style="max-width: 600px">
+        <p class="text-dark text-center" style="max-width: 600px">
           transfer this savings cost to you. Your passion for providing quality
           care for your patients is appreciated, and deserves to be
           appropriately rewarded.
         </p>
-        <p class="text-secondary text-center" style="max-width: 600px">
+        <p class="text-dark text-center" style="max-width: 600px">
           Far too many locums companies charge faciities higher commissions,
           which leaves less money on the table for doctors and APP's. Instead,
           AmPm takes a smaller commission.
@@ -418,7 +418,7 @@
                 alt="Image not found"
               />
               <h5>Scope</h5>
-              <p class="fw-lighter text-secondary text-center">
+              <p class="fw-lighter text-dark text-center">
                 We operate across all 50 states. You can, too
               </p>
             </div>
@@ -435,7 +435,7 @@
                 alt="Image not found"
               />
               <h5>SPECIALIZATION</h5>
-              <p class="fw-lighter text-secondary text-center">
+              <p class="fw-lighter text-dark text-center">
                 We make it easy to find you the right-fit job.
               </p>
             </div>
@@ -452,7 +452,7 @@
                 alt="Image not found"
               />
               <h5>PROFESSIONALISM</h5>
-              <p class="fw-lighter text-secondary text-center">
+              <p class="fw-lighter text-dark text-center">
                 Voted the best by professionals just like you.
               </p>
             </div>
@@ -469,7 +469,7 @@
                 alt="Image not found"
               />
               <h5>SERVICE</h5>
-              <p class="fw-lighter text-secondary text-center">
+              <p class="fw-lighter text-dark text-center">
                 We offer first-class service tailored to your needs.
               </p>
             </div>
@@ -480,12 +480,12 @@
     </div>
     <!-- Speciality grid   -->
     <!-- video section  -------------------------------------------------->
-    <div class="container-lg px-2 py-5 d-flex flex-column align-items-center">
+    <div class="container-lg px-3 py-5 d-flex flex-column align-items-center">
       <div>
         <h1 class="lh-sm mb-0 fw-bold">WORKING TOGETHER TO</h1>
         <h1 class="lh-sm mt-0 text-primary fw-bold">PROVIDE QUALITY CARE.</h1>
       </div>
-      <h3 class="text-center text-secondary">
+      <h3 class="text-center text-dark">
         See how our team works together to deliver care to patients who need it
         most.
       </h3>
@@ -498,7 +498,7 @@
     <!-- video section  -->
     <!-- What's locum section  -------------------------------------------------->
     <div class="bg-light d-flex justify-content-center">
-      <div class="container-lg px-2 py-5 row">
+      <div class="container-lg px-3 py-5 row">
         <!-- content  -------------------------------------------------->
         <div class="col-md-6 p-3">
           <div
@@ -510,12 +510,12 @@
                 to practice medicine.
               </h1>
             </div>
-            <h3 class="text-center text-secondary text-md-start">
+            <h3 class="text-center text-dark text-md-start">
               At Hayes Locums, our passion is matching physicians and advanced
               practice clinicians with the right locum tenens jobs.
             </h3>
             <p
-              class="fw-lighter text-secondary text-center text-md-start"
+              class="fw-lighter text-dark text-center text-md-start"
               style="max-width: 600px"
             >
               Whether you are looking to supplement your income, maintain your
@@ -540,7 +540,7 @@
     <!-- What's locum section  -->
     <!-- Why work with locum  -------------------------------------------------->
     <div
-      class="container-lg px-2 py-5 d-flex flex-column align-items-center"
+      class="container-lg px-3 py-5 d-flex flex-column align-items-center"
       style="max-width: 1000px"
     >
       <div>
@@ -549,19 +549,16 @@
           Locum Tenens companies?
         </h1>
       </div>
-      <h3 class="text-center text-secondary">
+      <h3 class="text-center text-dark">
         Our advanced practitioner and physician locum tenens placement services
         don’t stop with getting you an opportunity.
       </h3>
       <div>
-        <p
-          class="fw-bold text-secondary text-center mb-0"
-          style="max-width: 600px"
-        >
+        <p class="fw-bold text-dark text-center mb-0" style="max-width: 600px">
           Once Hayes Locums finds the right fit, we handle all the logistics:
         </p>
         <p
-          class="fw-lighter text-secondary text-center mt-0"
+          class="fw-lighter text-dark text-center mt-0"
           style="max-width: 600px"
         >
           from expediting any credentialing or licensing paperwork needed, to
@@ -577,7 +574,7 @@
     <!-- Why work with locum  -->
     <!-- Locum events -------------------------------------------------->
     <div class="bg-light">
-      <div class="container-lg px-2 py-5">
+      <div class="container-lg px-3 py-5">
         <div class="row">
           <!-- Title -------------------------------------------------->
           <div class="col-12">
@@ -717,7 +714,7 @@
     <!-- Testimonials -->
     <!-- custoemr service -------------------------------------------------->
     <section class="bg-light pt-5">
-      <div class="container-lg px-2 py-5">
+      <div class="container-lg px-3 py-5">
         <div class="row">
           <!-- item 1 -------------------------------------------------->
           <div class="col-md-6 d-flex justify-content-center mb-5 mb-md-0">
