--- a/search_jobs.html
+++ b/search_jobs.html
@@ -24,7 +24,7 @@
   </head>
   <body>
     <!-- Navigation  -------------------------------------------------->
-    <div class="bg-primary">
+    <div class="bg-primary text-white">
       <div
         class="container-lg d-flex justify-content-end gap-2 align-items-sm-center pt-3"
       >
@@ -32,7 +32,7 @@
         <p>
           <a
             href="#"
-            class="link-body-emphasis link-offset-2 link-underline-opacity-0"
+            class="link-body-emphasis link-offset-2 link-underline-opacity-0 text-white mx-2"
             >Why HayesLocums</a
           >
         </p>
@@ -41,7 +41,7 @@
         <p>
           <a
             href="#"
-            class="link-body-emphasis link-offset-2 link-underline-opacity-0"
+            class="link-body-emphasis link-offset-2 link-underline-opacity-0 text-white mx-2"
             >Blog</a
           >
         </p>
@@ -50,7 +50,7 @@
         <p>
           <a
             href="#"
-            class="link-body-emphasis link-offset-2 link-underline-opacity-0"
+            class="link-body-emphasis link-offset-2 link-underline-opacity-0 text-white mx-2"
             >Contact</a
           >
         </p>
@@ -67,9 +67,9 @@
         <!-- Logo  -------------------------------------------------->
         <a class="navbar-brand text-light" href="index.html">
           <img
-            src="images/logo.svg"
+            src="images/logo.png"
             alt="Image not found"
-            style="width: 175px"
+            style="height: 80px"
           />
         </a>
         <!-- Logo  -->
@@ -200,7 +200,7 @@
     <!-- Navbar  -->
     <!-- search -------------------------------------------------->
     <section id="searchSection" class="bg-light">
-      <div class="container-lg px-2 py-5">
+      <div class="container-lg px-3 py-5">
         <div class="row">
           <!-- search title-------------------------------------------------->
           <div class="col-md-6 d-flex flex-column gap-0">
@@ -307,7 +307,7 @@
     <!-- search -->
     <!-- search cards -------------------------------------------------->
     <section id="searchCards">
-      <div class="container-lg px-2 py-5">
+      <div class="container-lg px-3 py-5">
         <!-- <div class="d-flex flex-column flex-md-row gap-2"> -->
         <div class="row">
           <!-- Card 1 -------------------------------------------------->
@@ -465,7 +465,7 @@
 
     <!-- Pagination -------------------------------------------------->
     <section>
-      <div class="container-lg px-2 py-5 d-flex justify-content-end w-full">
+      <div class="container-lg px-3 py-5 d-flex justify-content-end w-full">
         <nav aria-label="Page navigation">
           <ul class="pagination">
             <li class="page-item">
@@ -482,7 +482,7 @@
     <!-- Pagination -->
     <!-- custoemr service -------------------------------------------------->
     <section class="bg-light pt-5">
-      <div class="container-lg px-2 py-5">
+      <div class="container-lg px-3 py-5">
         <div class="row">
           <!-- item 1 -------------------------------------------------->
           <div class="col-md-6 d-flex justify-content-center mb-5 mb-md-0">
